// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with any date and any time (empty time set) 1`] = `
<Component
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
    </Component>
  </ContentPadding>
  <Component
    style={
      Object {
        "backgroundColor": "#20215a",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="filter by date: Select dates"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      text="Select dates"
    />
    <Component
      style={
        Object {
          "borderColor": "#ffffff",
          "borderLeftWidth": 0.5,
          "opacity": 0.4,
        }
      }
    />
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="Filter by area, price..."
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      text="Filter by area, price..."
    />
  </Component>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</Component>
`;

exports[`renders correctly with any date and any time 1`] = `
<Component
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
    </Component>
  </ContentPadding>
  <Component
    style={
      Object {
        "backgroundColor": "#20215a",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="filter by date: Select dates"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      text="Select dates"
    />
    <Component
      style={
        Object {
          "borderColor": "#ffffff",
          "borderLeftWidth": 0.5,
          "opacity": 0.4,
        }
      }
    />
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="Filter by area, price..."
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      text="Filter by area, price..."
    />
  </Component>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</Component>
`;

exports[`renders correctly with date range and two times 1`] = `
<Component
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
    </Component>
  </ContentPadding>
  <Component
    style={
      Object {
        "backgroundColor": "#20215a",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <FilterHeaderButton
      active={true}
      badgeValue={null}
      label="filter by date: 2 Feb - 3 Feb"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      text="2 Feb - 3 Feb"
    />
    <Component
      style={
        Object {
          "borderColor": "#ffffff",
          "borderLeftWidth": 0.5,
          "opacity": 0.4,
        }
      }
    />
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="Filter by area, price..."
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      text="Filter by area, price..."
    />
  </Component>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</Component>
`;

exports[`renders correctly with single date and single time 1`] = `
<Component
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
    </Component>
  </ContentPadding>
  <Component
    style={
      Object {
        "backgroundColor": "#20215a",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <FilterHeaderButton
      active={true}
      badgeValue={null}
      label="filter by date: 2 Feb"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      text="2 Feb"
    />
    <Component
      style={
        Object {
          "borderColor": "#ffffff",
          "borderLeftWidth": 0.5,
          "opacity": 0.4,
        }
      }
    />
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="Filter by area, price..."
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      text="Filter by area, price..."
    />
  </Component>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</Component>
`;

exports[`renders correctly with tag filters selected 1`] = `
<Component
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
    </Component>
  </ContentPadding>
  <Component
    style={
      Object {
        "backgroundColor": "#20215a",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="filter by date: Select dates"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      text="Select dates"
    />
    <Component
      style={
        Object {
          "borderColor": "#ffffff",
          "borderLeftWidth": 0.5,
          "opacity": 0.4,
        }
      }
    />
    <FilterHeaderButton
      active={true}
      badgeValue={2}
      label="Filters"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      text="Filters"
    />
  </Component>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</Component>
`;
